--- a/config
+++ b/config
@@ -5,42 +5,33 @@
 # Homebrew Casks: Applications installed via Homebrew Cask.
 # These are GUI applications available through Homebrew.
 CASKS=(
-  # iterm2
-  firefox
-  firefox@developer-edition
-  # arc
-  visual-studio-code
-  # spotify
-  vlc
-  # dropbox
-  # google-drive
-  # sync
-  # github
-  # cyberduck
-  # postman
+  # firefox@developer-edition
+  affinity
   discord
-  # microsoft-teams
-  # silicon
-  # qflipper
-  # pieces
-  # ollama
-  # devtoys
-  # the-unarchiver
-  # cheatsheet
-  # zenmap
-  # tiled
-  # arduino-ide
-  # transmission
+  firefox
+  fork
+  jottacloud
+  local
+  maccy
+  mp3tag
+  nordvpn
+  obsidian
+  prepros
+  rekordbox
+  telegram
+  visual-studio-code
+  vlc
+  whatsapp
 )
 
 # Homebrew Formulae: Command line tools installed via Homebrew.
 FORMULAE=(
-  # speedtest-cli
   tree
+  pinentry-mac
+  # speedtest-cli
   # nmap
   # wget
   # git
-  pinentry-mac
   # python
   # python-tk
 )
@@ -75,9 +66,9 @@ APPSTORE=(
 # SYSTEM SETTINGS: Commands to configure macOS system preferences and behaviors.
 SETTINGS=(
   # Sets the mouse speed to 3
-  "defaults write -g com.apple.mouse.scaling 3"
+  "defaults write -g com.apple.mouse.scaling 2"
   # Sets the trackpad speed to 3
-  "defaults write -g com.apple.trackpad.scaling 3"
+  "defaults write -g com.apple.trackpad.scaling 1.75"
   # Sets the Bluetooth mouse to two-button mode
   "defaults write com.apple.driver.AppleBluetoothMultitouch.mouse MouseButtonMode TwoButton"
   # Sets the multi-touch mouse to two-button mode
@@ -87,9 +78,9 @@ SETTINGS=(
   # Shows hidden files in Finder
   "defaults write com.apple.finder AppleShowAllFiles true"
   # Shows the path bar in Finder
-  "defaults write com.apple.finder ShowPathbar -bool false"
+  "defaults write com.apple.finder ShowPathbar -bool true"
   # Shows the status bar in Finder
-  "defaults write com.apple.finder ShowStatusBar -bool false"
+  "defaults write com.apple.finder ShowStatusBar -bool true"
   # Makes new Finder windows open in the home directory ($HOME)
   "defaults write com.apple.finder NewWindowTarget PfHm"
   # Sets the preferred view style in Finder to list view
@@ -123,15 +114,15 @@ DOCK_ADD=(
   # "/Applications/Microsoft Teams (work or school).app"
 )
 DOCK_REMOVE=(
-  "Meldinger"
-  "Kart"
-  "Bilder"
-  "Påminnelser"
-  "FaceTime"
-  "Kontakter"
-  "TV"
-  "Musikk"
-  "Mail"
+  # "Meldinger"
+  # "Kart"
+  # "Bilder"
+  # "Påminnelser"
+  # "FaceTime"
+  # "Kontakter"
+  # "TV"
+  # "Musik"
+  # "Mail"
 )
 
 # HOMEBREW AUTOUPDATE: Configures the frequency of Homebrew package updates in milliseconds.
